# zhaoping

./: .env.example  .gitignore  README.md  e2e-hanno-report.json  e2e-hanno-report.md  pyproject.toml  requirements.txt  start.sh
app/: __init__.py
config/: services.toml  watchlist.example.toml
data/: intelligence_archive.jsonl
deploy/: zhaoping-public.service
docs/: api_domain_contract_inventory.md  capability_integration.md  watchlist_scheduling.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
scripts/: create_db.py  e2e_ai_native_fde_flow.py  e2e_ai_native_fde_goal.mjs  e2e_pg_concurrent_hanno_load.py  e2e_pg_phase1_specialty_probes.py  e2e_pg_render_final_reports.py  e2e_project_detail_clicks.mjs  e2e_v4_api_probes.py  e2e_v4_contract_audit.py  e2e_v4_render_report.py  e2e_v5_pg_soak.py  harvest_ai_native_fde_candidates.py  manual_test_monitor.sh  manual_test_watcher.py  migrate_add_job_rationale.py  run_watchlist.py  seed_db.py  smoke_external_services.py  smoke_search_sources.py  start_dev.sh  start_phone.sh  start_public_cloudflare.sh  watch_public_cloudflare.sh
tasks/: lessons.md  todo.md
tests/: test_bp_pipeline.py  test_candidate_evaluation_task.py  test_candidate_lead_ingestion.py  test_candidate_search_scheduler.py  test_dev_startup_scripts.py  test_email_delivery_provider.py  test_json_workflow_engine.py  test_node_watchdog.py  test_product_loop_api.py  test_projects_api.py  test_resume_ingestion.py  test_search_explainability.py  test_search_provider_probe.py  test_seed_db.py  test_static_contracts.py  (+1 more)
(+204 files in other folders)
