[project]
name = "robot-talent-agent-mvp"
version = "0.1.0"
description = "MVP data schema and local RAG ingest pipeline for home robotics talent evaluation."
requires-python = ">=3.11"
dependencies = [
    "docling>=2.31.0",
    "pydantic>=2.7.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.3.0",
    "outlines>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "alibabacloud-ocr-api20210707>=3.1.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
